# rustache

./: Cargo.toml  README.md
src/: build.rs  template.rs
