[package]

name = "rustache-lists"
version = "0.1.3-pre"
authors = ["Vanessa McHale <tmchale@wisc.edu>",
           "Jarrod Ruhland <jarrod.ruhland@gmail.com>",
           "Stephen Paul Weber <github@singpolyma.net>"]

description = "Mustache templating engine for rust with a bugfix for lists"
license = "MIT"
documentation = "https://docs.rs/rustache-lists/"
repository = "https://github.com/vmchale/rustache.git"
readme = "README.md"
keywords = ["template", "mustache"]

[lib]

name = "rustache"
path = "src/lib.rs"

[dependencies]
error-chain = "^0.5"
regex = "^0.1"
rustc-serialize = "^0.3"
